tdf#95587: Make rectangle control within tab pages work again

Since commit 74407aef94b6d8dfdd6, tab pages|controls are
considered to be container widgets (thus, search for the nearest
non-layout parent will never find a tab page parent, breaking
rectangle control in many dialogs). I've no idea how many
other functions' behaviour this changes in an unexpected way,
so I've reverted that bit.

That however means implementing slightly different approach to
tdf#92630 in dialogs (for a tab dialog, find current tab page
and go through its children)

Change-Id: I3ff5ac13f04b1c5c799c7a1a3769108927809f31